Fix width and overflow

--- a/zebar/starter/styles.css
+++ b/zebar/starter/styles.css
@@ -27,7 +27,7 @@ body,
 
 .app {
   display: grid;
-  grid-template-columns: 5fr 3fr 5fr;
+  grid-template-columns: minmax(0, 1fr) auto 1fr;
   align-items: center;
   height: 100%;
 }
@@ -40,6 +40,8 @@ body,
   width: fit-content;
   display: flex;
   align-items: center;
+  width: auto;
+  overflow: hidden;
 }
 
 .center {
@@ -48,6 +50,7 @@ body,
   padding-inline: 10px;
   border: 1px solid rgb(126 156 216 / 100%);
   border-top: 0;
+  margin-inline: 40px;
 }
 
 .time,
@@ -78,6 +81,8 @@ body,
 }
 
 .left-container {
+  width: fit-content;
+  max-width: 100%;
   height: 100%;
 }
 
@@ -161,6 +166,11 @@ body,
 
 .media-button {
   margin-left: 0px;
+}
+
+.title{
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .artist {
